// protoc -I . favorite.proto --go_out=. --go-grpc_out=.
syntax = "proto3";
option go_package = ".;douyin_extra_first";
package douyin.extra.first;

service Favorite{
  rpc FavoriteAction(FavoriteActionRequest) returns(FavoriteActionResponse);
  rpc FavoriteList(FavoriteListRequest) returns(FavoriteListResponse);
}
message FavoriteActionRequest {
  int64 video_id = 1; // 视频id
  int64 user_id = 2;  // 用户id
  int32 action_type =3 ; // 1-点赞，2-取消点赞
}

message FavoriteActionResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message FavoriteListRequest {
  int64 user_id = 1; // 用户id
}

message FavoriteListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated int64 video_list = 3; // 用户点赞视频列表id
}
